fix jumpy sidebar on page load
Fixed by hiding some map elements until after the map is loaded.

--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -20,6 +20,7 @@ body {
 }
 
 #info {
+    display: none;
     position: absolute;
     border-radius: 5px;
     background-color: black;
@@ -34,6 +35,7 @@ body {
 }
 
 .btn-group-layers {
+    display: none;
     bottom: 2.5em;
     left: 1.0em;
     z-index: 100;
